--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "concurrently": "^8.2.2",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "rimraf": "^6.0.1"
   },
