--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   "dependencies": {
     "concurrently": "^8.2.2",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "pg": "^8.12.0",
     "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
+    "@types/pg": "^8.11.8",
     "nodemon": "^3.1.4",
     "typescript": "^5.5.4"
   }
