--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prestart": "npm run build",
     "start": "node dist/index.js",
     "predev": "npm run build",
-    "dev": "concurrently \"npx tsc -w\" \"nodemon --env-file=.env dist/index.js\""
+    "dev": "concurrently \"npx tsc -w\" \"nodemon dist/index.js\""
   },
   "keywords": [],
   "author": "",
